GNU SASL NEWS -- History of user-visible changes.               -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** libgsasl: Rename gsasl_is_mechanism_name_valid to gsasl_mechanism_name_p.
For better sorting of public APIs and consistency with other *_p
function name usage.

*** Various cleanups, build/bug fixes and portability improvements.

* Noteworthy changes in release 1.11.2 (2021-10-25) [beta]

** libgsasl: New API gsasl_is_mechanism_name_valid().
This can be used to check if a mechanism name string is valid, i.e.,
validate string length and characters used.  This function is the
recommended upgrade path for code using
GSASL_VALID_MECHANISM_CHARACTERS, in the majority of use-cases.

** libgsasl: The following variables have been removed:
GSASL_VALID_MECHANISM_CHARACTERS: The reason for removing this is that
exporting static global variables from shared libraries has
portability concerns, and this is not a widely used variable anyway.

*** Various cleanups, build/bug fixes and portability improvements.

* Noteworthy changes in release 1.11.1 (2021-01-19) [alpha]

** New header gsasl-version.h is now installed.

** Deprecated enum Gsasl_cipher removed (forgotten in last release).

** Fix symbol versioning.
The goal of the 1.11.x branch is now to release 2.0.0.

* Noteworthy changes in release 1.11.0 (2021-01-07) [alpha]

** Stop shipping a separate tarball for libgsasl.
This allowed us to avoid a second lib/configure script.

** Build modernization.
Among other improvements, gsasl now use gnulib's bootstrap script for
building from git, see README-hacking (in git) for more information.

** The KERBEROS_V5 mechanism was removed.
It has not been enabled by default and was never standardized nor
widely deployed.

** Lasso is no longer an optional dependency.
It was only used for building the 'gsasl-saml20-request' helper-tool
for the example code for the SAML20 mechanism.  The example is still