@@ -47,6 +47,7 @@ Goktan Kantarcioglu <goktan@gmail.com>
 Jeremy Harris <jgh@wizmail.org>
 Daniel Stenberg
 Nelson H. F. Beebe <beebe@math.utah.edu>
+Kevin J. McCarthy <kevin@8t8.us>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
