@@ -2,6 +2,10 @@ GNU SASL NEWS -- History of user-visible changes.               -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** libgsasl: Fix substring prefix bug in gsasl_client_suggest_mechanism.
+Reported by "Kevin J. McCarthy" <kevin@8t8.us> in
+<https://lists.gnu.org/archive/html/help-gsasl/2021-12/msg00005.html
+
 ** libgsasl: Rename gsasl_is_mechanism_name_valid to gsasl_mechanism_name_p.
 For better sorting of public APIs and consistency with other *_p
 function name usage.
